# packy

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake.yml
include/: Bundle.hpp  Entry.hpp  EntryType.hpp
src/: Bundle.cpp
